--- a/src/renderer/views/Layout/Menu/Menu.module.scss
+++ b/src/renderer/views/Layout/Menu/Menu.module.scss
@@ -4,6 +4,7 @@ $Menu_background: lighten($color-neutral-darker, 5%) !default;
 
 .base {
   background: $Menu_background;
+  flex-wrap: nowrap;
 
   > * {
     order: 1;
@@ -23,8 +24,10 @@ $Menu_background: lighten($color-neutral-darker, 5%) !default;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0 16px;
+  padding: 0 6px;
   flex-grow: 1;
+  flex-shrink: 0;
+  white-space: nowrap;
 }
 
 .base--isMac {
